# sim2022

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml  format-check.yml  loc.yml  perf.yml
ci/: Dockerfile  riscv_toolchain.7z
cmake/: clang_format.cmake  comp_flags.cmake
include/common/: common.hh  counters.hh  inst.hh  state.hh
include/decoder/: decoder.hh
include/elfloader/: elfloader.hh
include/executor/: executor.hh
include/hart/: hart.hh
include/instruction/: instruction.hh
include/memory/: memory.hh
scripts/codegen/: CMakeLists.txt  decoder.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cc
src/decoder/: CMakeLists.txt  decoder.py
src/elfloader/: CMakeLists.txt  elfloader.cc
src/executor/: CMakeLists.txt  executor.cc  executor.ii
src/hart/: hart.cc
src/memory/: memory.cc
test/e2e/: lit.cfg.py
test/e2e/simulator/: 8-queens.c  8-queens.c.disable  8q  fact.c
test/glang-lib/: libc_noasm.c
test/unit/: CMakeLists.txt  memory.test.cc
test/unit/decoder/: CMakeLists.txt  bits.cc
test/unit/elfloader/: elfloader.cc
test/unit/executor/: CSR.cc  RV32I.cc
test/unit/memory/: memory.test.cc
tools/: CMakeLists.txt  cosim.py
tools/dectool/: CMakeLists.txt  main.cc
tools/elfdump/: CMakeLists.txt  main.cc
tools/simulator/: CMakeLists.txt  main.cc
